feat: add unit tests